# linkerd-tproxy-poc

./: Cargo.toml  Dockerfile  Dockerfile-server  Dockerfile-tproxy  Makefile  README.md
echo-server/: Cargo.toml
echo-server/src/: main.rs
k8s/: deploy-curl.yaml  deploy-nat.yaml  deploy-tproxy.yaml  deploy.yaml
src/: main.rs
tproxy-poc/: Cargo.toml
tproxy-poc/src/: main.rs
