[package]
name = "linkerd-tproxy-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iptables = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2.0"
structopt = "0.3"
socket2 = { version = "0.4.2", features = ["all"]}
